# gitgym

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  prompt.md  pyproject.toml  run_loop.sh
.github/ISSUE_TEMPLATE/: bug_report.md  exercise_request.md
.github/workflows/: ci.yml  publish.yml
exercises/01_basics/01_init/: exercise.toml  setup.sh  verify.sh
exercises/01_basics/02_staging/: exercise.toml  setup.sh  verify.sh
exercises/01_basics/03_status/: exercise.toml  setup.sh  verify.sh
exercises/01_basics/04_first_commit/: exercise.toml  setup.sh  verify.sh
exercises/01_basics/05_gitignore/: exercise.toml  setup.sh  verify.sh
exercises/02_committing/01_amend/: exercise.toml  setup.sh  verify.sh
exercises/02_committing/02_multi_commit/: exercise.toml  setup.sh  verify.sh
exercises/02_committing/03_diff/: exercise.toml  setup.sh  verify.sh
exercises/03_branching/01_create_branch/: exercise.toml  setup.sh  verify.sh
exercises/03_branching/02_switch_branches/: exercise.toml  setup.sh  verify.sh
exercises/03_branching/03_delete_branch/: exercise.toml  setup.sh  verify.sh
exercises/04_merging/01_fast_forward/: exercise.toml  setup.sh  verify.sh
exercises/04_merging/02_three_way_merge/: exercise.toml  setup.sh  verify.sh
exercises/04_merging/03_merge_conflict/: exercise.toml  setup.sh  verify.sh
exercises/05_history/01_log_basics/: exercise.toml  setup.sh  verify.sh
exercises/05_history/02_log_graph/: exercise.toml  setup.sh  verify.sh
exercises/05_history/03_blame/: exercise.toml  setup.sh  verify.sh
exercises/05_history/04_show/: exercise.toml  setup.sh  verify.sh
exercises/06_undoing/01_restore_file/: exercise.toml  setup.sh  verify.sh
exercises/06_undoing/02_unstage/: exercise.toml  (+2 more)
specs/: PLAN.md  README.md
src/gitgym/: __init__.py  __main__.py  cli.py  config.py  display.py  exercise.py  exercises  progress.py  runner.py  watcher.py
tests/: test_cli_describe.py  test_cli_git_check.py  test_cli_help.py  test_cli_hint.py  test_cli_list.py  test_cli_next.py  test_cli_progress.py  test_cli_reset.py  test_cli_start.py  test_cli_verify.py  test_cli_version.py  test_cli_watch.py  test_config.py  test_display.py  test_exercise.py  test_exercise_01_init.py  test_exercise_02_staging.py  test_exercise_03_status.py  test_exercise_04_first_commit.py  test_exercise_05_gitignore.py  test_exercise_06_amend.py  test_exercise_07_multi_commit.py  test_exercise_08_diff.py  test_exercise_09_create_branch.py  test_exercise_10_switch_branches.py  test_exercise_11_delete_branch.py  test_exercise_12_fast_forward.py  test_exercise_13_three_way_merge.py  test_exercise_14_merge_conflict.py  test_exercise_15_log_basics.py  test_exercise_16_log_graph.py  test_exercise_17_blame.py  test_exercise_18_show.py  test_exercise_19_restore_file.py  test_exercise_20_unstage.py  test_exercise_21_revert.py  test_exercise_22_reset_soft.py  test_exercise_23_reset_mixed.py  test_exercise_24_basic_rebase.py  test_exercise_25_interactive_rebase.py  (+11 more)
(+36 files in other folders)
