[project]
name = "gitgym"
version = "0.1.0"
description = "An interactive CLI platform for learning git, inspired by Rustlings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
]

[project.optional-dependencies]
watch = ["watchdog"]

[project.scripts]
gitgym = "gitgym.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitgym"]

[tool.hatch.build.targets.wheel.force-include]
"exercises" = "gitgym/exercises"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "exercises/",
    "README.md",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
