[project]
name = "gitgym"
version = "0.1.0"
description = "An interactive CLI platform for learning git, inspired by Rustlings."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "enerrio" },
]
keywords = ["git", "learning", "cli", "exercises", "tutorial", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click",
]

[project.urls]
Homepage = "https://github.com/enerrio/git-gym"
Repository = "https://github.com/enerrio/git-gym"
Issues = "https://github.com/enerrio/git-gym/issues"
Changelog = "https://github.com/enerrio/git-gym/blob/main/CHANGELOG.md"

[project.optional-dependencies]
watch = ["watchdog"]

[project.scripts]
gitgym = "gitgym.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitgym"]

[tool.hatch.build.targets.wheel.force-include]
"exercises" = "gitgym/exercises"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "exercises/",
    "README.md",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
